resolved white space right side of the screen

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 
-html,body{
+/* html,body{
   box-sizing: border-box;
   overflow-x: hidden;
   color: #034C63;
-}
+} */
 
 @font-face {
   font-family: "Gilroy-Bold";
@@ -135,9 +135,9 @@ button:active {
 }
 
 
-html,
-body {
+html,body {
   overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -148,5 +148,10 @@ body {
     padding-bottom: 3rem;
     padding-top: 3rem;
   }
+  html,body {
+width: 100%;
+  overflow-x: hidden;
+}
+
 
 }
