--- a/src/Component/Cardfooter.css
+++ b/src/Component/Cardfooter.css
@@ -152,7 +152,7 @@
 
   @media (min-width:320px) and (max-width:480px){
     .motive-text{
-      font-size:1rem;
+      font-size:1.2rem;
       padding-left: 1.5rem;
       padding-right: 1.5rem;
     }
@@ -228,10 +228,11 @@
     line-height: 80px;
     display: inline-block;
     font-weight: 700;
+ margin-left: -4.5rem !important;
     text-transform: uppercase;
     position: absolute;
-    left: 76.4%;
-    margin-left: -100px;
+    /* left: 76.4%; */
+    /* margin-left: -100px; */
     opacity: 1;
     transition: opacity 0.3s ease-in-out;
     pointer-events: none;
